--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/plugin-transform-object-assign": "^7.2.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/aws-lambda": "^8.10.19",
+    "@types/jest": "^24.0.6",
+    "@types/node": "^11.9.4",
+    "@types/react": "^16.8.3",
+    "@types/react-dom": "^16.8.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "typescript": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
