--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lambda": "netlify-lambda serve src/lambda",
+    "lambda": "netlify-lambda serve src/lambda --config ./config/webpack.functions.js",
     "build:lambda": "netlify-lambda build src/lambda"
   },
   "eslintConfig": {
@@ -34,6 +34,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "dotenv-webpack": "^1.7.0",
     "http-proxy-middleware": "^0.19.1",
     "netlify-lambda": "^1.4.2"
   }
