--- a/package.json
+++ b/package.json
@@ -2,23 +2,6 @@
   "name": "neil-frontend",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.3.3",
-    "@babel/plugin-transform-object-assign": "^7.2.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/aws-lambda": "^8.10.19",
-    "@types/jest": "^24.0.6",
-    "@types/node": "^11.9.4",
-    "@types/react": "^16.8.3",
-    "@types/react-dom": "^16.8.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
-    "tslint": "^5.12.1",
-    "tslint-config-airbnb": "^5.11.1",
-    "tslint-react": "^3.6.0",
-    "typescript": "^3.3.3"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && netlify-lambda build src/lambda",
@@ -27,6 +10,25 @@
     "lambda": "netlify-lambda serve src/lambda --config ./config/webpack.functions.js",
     "build:lambda": "netlify-lambda build src/lambda",
     "lint": "tslint -c tslint.json src/**/*.{ts,tsx}"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.3.3",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/aws-lambda": "^8.10.19",
+    "@types/jest": "^24.0.6",
+    "@types/mongodb": "^3.1.21",
+    "@types/node": "^11.9.4",
+    "@types/react": "^16.8.3",
+    "@types/react-dom": "^16.8.2",
+    "mongodb": "^3.1.13",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-scripts": "2.1.1",
+    "tslint": "^5.12.1",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.3.3"
   },
   "eslintConfig": {
     "extends": "react-app"
