--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/plugin-transform-object-assign": "^7.2.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/aws-lambda": "^8.10.19",
+    "@types/dotenv": "^6.1.1",
     "@types/jest": "^24.0.6",
     "@types/mongodb": "^3.1.21",
     "@types/node": "^11.9.4",
