--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
     "@babel/preset-typescript": "^7.3.3",
     "@types/aws-lambda": "^8.10.19",
     "@types/dotenv": "^6.1.1",
+    "@types/ejs": "^2.6.3",
     "@types/jest": "^24.0.6",
     "@types/mongodb": "^3.1.21",
     "@types/node": "^11.9.4",
+    "@types/nodemailer": "^4.6.7",
+    "@types/nodemailer-mailgun-transport": "^1.3.4",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
+    "ejs": "^2.6.1",
     "mongodb": "^3.1.13",
+    "nodemailer": "^6.0.0",
+    "nodemailer-mailgun-transport": "^1.4.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
