--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemailer-mailgun-transport": "^1.4.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.1",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
