--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/nodemailer-mailgun-transport": "^1.3.4",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
+    "@types/react-router-dom": "^4.3.1",
     "ejs": "^2.6.1",
     "mongodb": "^3.1.13",
     "nodemailer": "^6.0.0",
