--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && netlify-lambda build src/lambda",
+    "build": "react-scripts build && netlify-lambda build src/lambda --config ./config/webpack.functions.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lambda": "netlify-lambda serve src/lambda --config ./config/webpack.functions.js",
-    "build:lambda": "netlify-lambda build src/lambda",
+    "build:lambda": "netlify-lambda build src/lambda --config ./config/webpack.functions.js",
     "lint": "tslint -c tslint.json src/**/*.{ts,tsx}"
   },
   "dependencies": {
