--- a/netlify.toml
+++ b/netlify.toml
@@ -6,10 +6,9 @@
   to = "/index.html"
   status = 200
 
+
 [context.production.environment]
-  REACT_APP_CONTEXT="$CONTEXT"
-  REACT_APP_DEPLOY_URL="$DEPLOY_URL"
+  ENV="production"
 
 [context.deploy-preview.environment]
-  REACT_APP_CONTEXT="$CONTEXT"
-  REACT_APP_DEPLOY_URL="$DEPLOY_URL"
+  ENV="deploy-preview"
