--- a/netlify.toml
+++ b/netlify.toml
@@ -7,8 +7,10 @@
   status = 200
 
 
+[context.production]
 [context.production.environment]
   ENV="production"
 
+[context.deploy-preview]
 [context.deploy-preview.environment]
   ENV="deploy-preview"
