--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
     "@types/react-router-dom": "^4.3.1",
+    "@types/styled-components": "4.1.8",
     "ejs": "^2.6.1",
     "mongodb": "^3.1.13",
     "nodemailer": "^6.1.0",
     "nodemailer-mailgun-transport": "^1.4.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.1",
+    "styled-components": "^4.2.0",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-react": "^3.6.0",
