--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && yarn zip",
+    "build": "yarn lint && react-scripts build && yarn zip",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lambda": "netlify-lambda serve src/lambda --config ./config/webpack.functions.serve.js",
     "build:lambda": "netlify-lambda build src/lambda --config ./config/webpack.functions.build.js",
-    "lint": "tslint -c tslint.json src/**/*.{ts,tsx}",
+    "lint": "yarn eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore .",
+    "lint:fix": "yarn eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore --fix . ",
     "zip": "tsc src/lambda/signup.ts --rootDir src/lambda  --outDir lambda/signup && tsc src/lambda/confirm.ts --rootDir src/lambda  --outDir lambda/confirm && tsc src/lambda/unsubscribe.ts --rootDir src/lambda  --outDir lambda/unsubscribe"
   },
   "dependencies": {
@@ -37,13 +38,17 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.1",
     "styled-components": "^4.2.0",
-    "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-react": "^3.6.0",
     "typescript": "^3.3.3"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn lint"
+    }
   },
   "browserslist": [
     ">0.2%",
@@ -52,8 +57,20 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "2.3.1",
+    "@typescript-eslint/parser": "2.3.1",
     "dotenv-webpack": "^1.7.0",
+    "eslint": "6.1.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-prettier": "6.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "3.1.1",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "http-proxy-middleware": "^0.19.1",
-    "netlify-lambda": "^1.4.5"
+    "husky": "3.0.5",
+    "netlify-lambda": "^1.4.5",
+    "prettier": "1.18.2"
   }
 }
