--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,7 @@
     "ecmaFeatures": {
       "jsx": true
     },
-    "project": "./tsconfig.json"
+    "project": "./tsconfig.eslint.json"
   },
   "plugins": [
     "react-hooks",
@@ -35,6 +35,14 @@
     }
   },
   "rules": {
-  "prettier/prettier": "error"
+  "prettier/prettier": "error",
+  "@typescript-eslint/explicit-function-return-type": "off",
+  "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".jsx"] }],
+  "@typescript-eslint/camelcase": "off",
+  "import/no-extraneous-dependencies":"off",
+  "import/no-unresolved": "off",
+  "react/state-in-constructor":"off",
+  "import/prefer-default-export":"off",
+  "@typescript-eslint/require-await":"off"
   }
 }
