--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "yarn lint && react-scripts build && yarn zip",
+    "build": "yarn lint && yarn assetsJson && react-scripts build && yarn zip",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lambda": "netlify-lambda serve src/lambda --config ./config/webpack.functions.serve.js",
     "build:lambda": "netlify-lambda build src/lambda --config ./config/webpack.functions.build.js",
     "lint": "yarn eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore .",
     "lint:fix": "yarn eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore --fix . ",
-    "zip": "tsc src/lambda/signup.ts --rootDir src/lambda  --outDir lambda/signup && tsc src/lambda/confirm.ts --rootDir src/lambda  --outDir lambda/confirm && tsc src/lambda/unsubscribe.ts --rootDir src/lambda  --outDir lambda/unsubscribe"
+    "zip": "tsc src/lambda/signup.ts --rootDir src/lambda  --outDir lambda/signup && tsc src/lambda/confirm.ts --rootDir src/lambda  --outDir lambda/confirm && tsc src/lambda/unsubscribe.ts --rootDir src/lambda  --outDir lambda/unsubscribe",
+    "assetsJson": "tsc utils/createAssetsJson.ts --outDir build && node build/createAssetsJson.js"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.3",
